# loan-credit-analysis

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
loan_credit_analysis/: config.py
loan_credit_analysis/scripts/: analysis.py  populate_db.py  setup_db.py
